--- a/src/posts/reflection-architecture-one-year.mdx
+++ b/src/posts/reflection-architecture-one-year.mdx
@@ -1,7 +1,8 @@
 export const title = "Reflecting on my Architecture Decisions: 1 Year Later";
 export const slug = "reflecting-architecture-decisions-1-year";
 export const tags = ["javascript"];
-export const description = "Description";
+export const description =
+  "Looking at my major architectural decisions for this website from a year ago and whether I still stand by them";
 export const cover = "architecture-1-year-cover.png";
 export const published = new Date(2024, 1, 26);
 export const shortCodes = ["architecture-1"];
