--- a/src/posts/currying-react.mdx
+++ b/src/posts/currying-react.mdx
@@ -4,7 +4,7 @@ import { faGraduationCap } from "@fortawesome/pro-solid-svg-icons";
 
 export const title = "Mastering React Component Callbacks with Currying";
 export const slug = "mastering-react-component-callbacks-with-currying";
-export const tags = ["React", "javascript"];
+export const tags = ["React", "javascript", "software"];
 export const description =
   "How to use functional currying to make React callbacks more clear and maintainable";
 export const cover = "react-currying-cover.png";
