--- a/src/posts/javascript-variables-in-tailwind.mdx
+++ b/src/posts/javascript-variables-in-tailwind.mdx
@@ -1,6 +1,6 @@
 export const title = "Using Javascript Variables in Tailwind";
 export const slug = "using-javascript-variables-in-tailwind";
-export const tags = ["javascript", "css", "Tailwind", "web"];
+export const tags = ["javascript", "css", "Tailwind", "web", "software"];
 export const description =
   "How to use dynamically calculated or user generated values in Tailwind";
 export const cover = "tailwind-variables-cover.png";
