--- a/src/posts/recursive-react-components.mdx
+++ b/src/posts/recursive-react-components.mdx
@@ -4,7 +4,7 @@ import { Tweet } from "../components/Tweet";
 
 export const title = "Recursive React Component Rendering";
 export const slug = "recursive-react-component-rendering";
-export const tags = ["React", "Javascript"];
+export const tags = ["React", "Javascript", "software"];
 export const description =
   "How to leverage recursion when building React applications and components";
 export const cover = "react-recursion-cover-water.png";
