--- a/src/posts/tracking-previous-prop-values-in-FCs.mdx
+++ b/src/posts/tracking-previous-prop-values-in-FCs.mdx
@@ -1,6 +1,6 @@
 export const title = "Reacting to Prop Changes in React Functional Components";
 export const slug = "reacting-to-prop-changes-in-react-functional-components";
-export const tags = ["javascript", "React"];
+export const tags = ["javascript", "React", "software"];
 export const description =
   "How your functional React component can detect and handle changes to props (without useEffect)";
 export const cover = "react-prev-props-cover.png";
