--- a/src/posts/visual-regression-tests.mdx
+++ b/src/posts/visual-regression-tests.mdx
@@ -7,6 +7,7 @@ export const tags = [
   "jest",
   "web",
   "javascript",
+  "software",
 ];
 export const description =
   "How I derive my visual regression tests from Storybook stories for quick and effective design verification";
