new compressed image

--- a/src/posts/reflection-architecture-one-year.mdx
+++ b/src/posts/reflection-architecture-one-year.mdx
@@ -3,7 +3,7 @@ export const slug = "reflecting-architecture-decisions-1-year";
 export const tags = ["opinion", "web", "software", "React"];
 export const description =
   "Looking at my major architectural decisions for this website from a year ago and whether I still stand by them";
-export const cover = "blueprint-cover-updated.png";
+export const cover = "blueprint-cover-updated-compressed.png";
 export const published = new Date(2024, 1, 26);
 export const shortCodes = ["architecture-1"];
 import {
