--- a/src/posts/reflection-architecture-one-year.mdx
+++ b/src/posts/reflection-architecture-one-year.mdx
@@ -1,4 +1,4 @@
-export const title = "Reflecting on my Architecture Decisions: 1 Year Later";
+export const title = "Reflecting on my Architecture Decisions: One Year Later";
 export const slug = "reflecting-architecture-decisions-1-year";
 export const tags = ["opinion", "web", "software", "React"];
 export const description =
