--- a/src/app/(mainLayoutOptIn)/slides/render23/[slide]/content/intro.mdx
+++ b/src/app/(mainLayoutOptIn)/slides/render23/[slide]/content/intro.mdx
@@ -1,4 +1,4 @@
-import { Avatar } from "../../../../../components/Avatar";
+import { Avatar } from "../../../../../../components/Avatar";
 import { SlideFooter } from "../../../components/Footer";
 import Image from "next/image";
 import renderLogo from "./img/render-color-logo.png";
