add proxy endpoint, fix cover image

--- a/src/posts/using-ai-to-generate-dall-e-2-prompts.mdx
+++ b/src/posts/using-ai-to-generate-dall-e-2-prompts.mdx
@@ -3,7 +3,7 @@ export const slug = "using-ai-to-generate-dall-e-2-prompts";
 export const tags = ["software", "ai", "DALL-E 2"];
 export const description =
   "Using ChatGPT to generate prompts that can be fed into DALL·E 2 to generate images";
-export const cover = "ai-generated-prompts-cover.png?hideShadow";
+export const cover = "ai-generated-prompts-cover.png";
 export const published = new Date(2022, 11, 5);
 export const shortCodes = ["gpt-dalle", "ai-prompts"];
 
