fix broken links

--- a/src/posts/how-ai-is-revolutionizing-personal-brand-creation.mdx
+++ b/src/posts/how-ai-is-revolutionizing-personal-brand-creation.mdx
@@ -123,7 +123,7 @@ Sometimes (but rarely), the writing itself isn't the main focus of the content I
   </tbody>
 </Table>
 
-It's not quite how I would have put it, but it's a good start! I find that using these tools as a launching-off point, either by generating short summaries or getting brainstorming started is the most effective utilization. Just for fun, I did want to see how copy.ai would do at writing this entire blog post from scratch. The result is very general and buzzwordy, but it's worth checking out just to see how powerful these tools can be! You can read [a PDF of the full text here](/uploads/brand_ai.pdf "AI PDF").
+It's not quite how I would have put it, but it's a good start! I find that using these tools as a launching-off point, either by generating short summaries or getting brainstorming started is the most effective utilization. Just for fun, I did want to see how copy.ai would do at writing this entire blog post from scratch. The result is very general and buzzwordy, but it's worth checking out just to see how powerful these tools can be! You can read [a PDF of the full text here](https://v2.keegandonley.com/uploads/brand_ai.pdf "AI PDF").
 
 For a good laugh, I'd recommend checking out the [Viral Post Generator](https://viralpostgenerator.com/?target=998942e43ce445e7a8ed43cc51862f42&params=%7B%7D) for LinkedIn. It's a tongue-in-cheek application of text generation to build content that feels right at home on LinkedIn.
 
