--- a/src/posts/maintaining-a-culture-of-confident-energized-and-successful-engineers.mdx
+++ b/src/posts/maintaining-a-culture-of-confident-energized-and-successful-engineers.mdx
@@ -47,4 +47,4 @@ Everyone I've talked to has expressed a similar sentiment - when their needs are
 
 This has continued to be an amazing conference to network, meet others, and talk about more than just the code we write - but how it gets written and how we can support each other through that process. I can't wait for more to come!
 
-> A quick tip for events like this: Have a wallpaper on your phone lockscreen with QR codes to important links - be it your LinkedIn, Twitter, or website. [Here's mine](/img/posts/wallpaper.png "Wallpaper") for reference. I just whipped it up in Figma while between talks and it's been great!
+> A quick tip for events like this: Have a wallpaper on your phone lockscreen with QR codes to important links - be it your LinkedIn, Twitter, or website. [Here's mine](https://v2.keegandonley.com/img/posts/wallpaper.png "Wallpaper") for reference. I just whipped it up in Figma while between talks and it's been great!
